k8s-secret/kuard.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - name: kuard
          image: blauwelucht/kuard-amd64:1
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 200Mi
              cpu: "0.2"
            requests:
              memory: 100Mi
              cpu: "0.1"
          command:
            - "/kuard"
            - "$(PARAM1)"
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: secret-volume
              mountPath: /secret
      volumes:
        - name: config-volume
          configMap:
            name: test-config
        - name: secret-volume
          secret:
            secretName: secret-config
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: kuard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
spec:
  ingressClassName: traefik
  rules:
    - host: kuard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 8080
